Add the POST /node/name/.../object/path/.../action/shutdown api handler
Use it in the "o[mx] <sel> shutdown" commands RemoteFunc.
